Fixed the alignment for data bulk upload entry

--- a/src/app/users/data-upload/bulk-entry/bulk-entry.component.scss
+++ b/src/app/users/data-upload/bulk-entry/bulk-entry.component.scss
@@ -22,3 +22,9 @@
   transform: translateY(2px);
   float: right;
 }
+
+
+.container {
+      width: 95%;
+    max-width: 100vw;
+}
